--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,11 @@ dependencies {
     implementation 'org.mapstruct:mapstruct:1.4.2.Final'
     annotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
 
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.11'
+
     // aws sqs
     implementation platform('software.amazon.awssdk:bom:2.20.26')
     implementation 'org.springframework.cloud:spring-cloud-aws-messaging:2.2.6.RELEASE'
