--- a/src/main/resources/application-staged.properties
+++ b/src/main/resources/application-staged.properties
@@ -7,8 +7,8 @@ spring.datasource.username=gift-svc
 spring.datasource.password=gift-pass
 
 eureka.instance.instance-id=${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 
