AWS SQS 설명및 구현 (Spring Boot 3 -> Spring Boot 2)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
 gift.order.base-url=http://localhost:8080/
+
+cloud.aws.access-key=AKIA5B3KKMM3GIIWBMQM
+cloud.aws.secret-key=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
