LocalStask (AWS SQS) 적용

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=gift-pass
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
-gift.order.base-url=http://localhost:8080/
+gift.order.base-url=http://localhost:28080/
 
-cloud.aws.access-key=AKIA5B3KKMM3GIIWBMQM
-cloud.aws.secret-key=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
+spring.profiles.group.local=aws-local
+spring.profiles.group.stage=aws,eureka
