주목 수락까지의 절차에 대해서 테스트 코드 추가
* awaitility 라이브러리 추가
  * 외부에서 비동기 적으로 들어오는 부분을 커버하기 위해서 사용

* localstack SQS 테스트 환경 구축 (명령어)
`awslocal --endpoint-url=http://localhost:4566 sqs create-queue --queue-name order-payComplete.fifo --attributes FifoQueue=true`
`awslocal sqs list-queues`

* testRestTemplate
  * 외부에 요청을 보내기 위해서 사용

* ObjectMother 추가
  * 테스트를 빨리 하기 위해서 필요할 때 마다 지속적으로 추가

--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation("com.navercorp.fixturemonkey:fixture-monkey-starter:0.5.2")
     testImplementation("com.navercorp.fixturemonkey:fixture-monkey-javax-validation:0.5.2")
+    testImplementation 'org.awaitility:awaitility:4.2.0'
 }
 
 dependencyManagement {
