--- a/src/main/resources/application-aws-local.properties
+++ b/src/main/resources/application-aws-local.properties
@@ -1,4 +1,4 @@
-cloud.aws.access-key=test
-cloud.aws.secret-key=test
-cloud.aws.end-point=http://localhost:4566
-cloud.aws.region=us-east-1
+spring.cloud.aws.credentials.access-key=test
+spring.cloud.aws.credentials.secret-key=test
+spring.cloud.aws.endpoint=http://localhost:4566
+spring.cloud.aws.region.static=us-east-1
