--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -1,4 +1,4 @@
-cloud.aws.access-key=AKIA5B3KKMM3IAJFEAW4
-cloud.aws.secret-key=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
-cloud.aws.end-point=https://sqs.ap-northeast-2.amazonaws.com
-cloud.aws.region=ap-northeast-2
+spring.cloud.aws.credentials.access-key=AKIA5B3KKMM3IAJFEAW4
+spring.cloud.aws.credentials.secret-key=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
+spring.cloud.aws.endpoint=https://sqs.ap-northeast-2.amazonaws.com
+spring.cloud.aws.region.static=ap-northeast-2
