--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,10 +1,16 @@
 server.port=18080
 
 spring.application.name=gift-service
-spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:13306/gift?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:13306/gift?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=gift-svc
 spring.datasource.password=gift-pass
+spring.flyway.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.flyway.url=jdbc:mysql://localhost:13306/gift?serverTimezone=UTC&characterEncoding=UTF-8
+spring.flyway.user=gift-svc
+spring.flyway.password=gift-pass
+spring.flyway.schemas=gift
+spring.flyway.enabled=true
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
