--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.5.4'
+    id 'org.springframework.boot' version '3.0.3'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 //    id 'java'
@@ -33,7 +33,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
     implementation 'org.flywaydb:flyway-core'
-//    implementation 'org.flywaydb:flyway-mysql'
+    implementation 'org.flywaydb:flyway-mysql'
 
     implementation 'org.apache.commons:commons-lang3:3.9'
 
@@ -61,12 +61,12 @@ dependencies {
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
-//    runtimeOnly 'com.mysql:mysql-connector-j'
-    runtimeOnly 'mysql:mysql-connector-java'
+    runtimeOnly 'com.mysql:mysql-connector-j'
+//    runtimeOnly 'mysql:mysql-connector-java'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation("com.navercorp.fixturemonkey:fixture-monkey-starter:0.5.2")
-    testImplementation("com.navercorp.fixturemonkey:fixture-monkey-javax-validation:0.5.2")
+    testImplementation("com.navercorp.fixturemonkey:fixture-monkey-jakarta-validation:0.5.2")
     testImplementation 'org.awaitility:awaitility:4.2.0'
 }
 
