--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=18080
 
 spring.application.name=gift-service
-spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:13306/gift?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:13306/gift?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=gift-svc
 spring.datasource.password=gift-pass
 
