--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ gift.order.base-url=http://localhost:28080/
 
 spring.profiles.group.local=aws-local
 spring.profiles.group.stage=aws,eureka
+
+springdoc.swagger-ui.path=swagger-ui.html
