--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,7 @@ dependencies {
     testImplementation("com.navercorp.fixturemonkey:fixture-monkey-jakarta-validation:0.5.2")
     testImplementation 'org.awaitility:awaitility:4.2.0'
 
-//    runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'com.h2database:h2'
 }
 
 dependencyManagement {
