--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,13 @@
 server.port=18080
 
 spring.application.name=gift-service
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:13306/gift?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username=gift-svc
-spring.datasource.password=gift-pass
-spring.flyway.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.flyway.url=jdbc:mysql://localhost:13306/gift?serverTimezone=UTC&characterEncoding=UTF-8
-spring.flyway.user=gift-svc
-spring.flyway.password=gift-pass
-spring.flyway.schemas=gift
-spring.flyway.enabled=true
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
 gift.order.base-url=http://localhost:28080/
 
-spring.profiles.group.local=aws-local
-spring.profiles.group.stage=aws,eureka
+spring.profiles.group.local=aws-local,db-h2
+spring.profiles.group.stage=aws,eureka,db-mybatis
 
 springdoc.swagger-ui.path=swagger-ui.html
